# OPA-Workshop

./: README.md
k8s-deployment/: Makefile  README.md  docker-compose.yaml  k3d-config.yaml
oauth2-opa-integration/: Makefile  TODO.md  pyproject.toml
project1-restapi-auth-opa-integration/: .gitignore  dockerfile
project3-oauth2-opa-integration/: README.md
restapi-auth-opa-integration/: Makefile  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml
restapi-auth-opa-integration/scripts/: generate_token.py  validate_opa_response.py  validate_policy.py
restapi-auth-opa-integration/src/main/python/restapi_auth_opa_integration/: app.py
restapi-auth-opa-integration/src/main/python/restapi_auth_opa_integration/config/: auth_config.py
restapi-auth-opa-integration/src/main/python/restapi_auth_opa_integration/controllers/: user_controller.py
restapi-auth-opa-integration/src/main/python/restapi_auth_opa_integration/middleware/: authz_middleware.py
restapi-auth-opa-integration/src/main/python/restapi_auth_opa_integration/routes/: routes.py
restapi-auth-opa-integration/src/main/python/restapi_auth_opa_integration/services/: authorization_service.py  configuration_service.py
restapi-auth-opa-integration/src/main/rego/: policy.rego
restapi-auth-opa-integration/src/main/rego/common/: jwt_utils.rego  utils.rego
simple-opa-integration/: .dockerignore  .gitignore  Makefile  README.md  db.sqlite  docker-compose.yaml  dockerfile  main.py  pyproject.toml
simple-opa-integration/deployment/app/config/: server_config.yaml
simple-opa-integration/deployment/authz/config/: authz_config.yaml
simple-opa-integration/deployment/authz/policies/: policy.rego
simple-opa-integration/deployment/authz/policies/common/: jwt_utils.rego
simple-opa-integration/policies/: policy.rego
simple-opa-integration/scripts/: generate_token.py  validate_policy.py
simple-opa-integration/simple_opa_integration/: app.py  container.py
simple-opa-integration/simple_opa_integration/config/: auth_config.py  server_config.py
simple-opa-integration/simple_opa_integration/controllers/: user_controller.py
simple-opa-integration/simple_opa_integration/middleware/: authz_middleware.py
simple-opa-integration/simple_opa_integration/routes/: routes.py
simple-opa-integration/simple_opa_integration/services/: authorization_service.py  user_service.py
simple-opa-integration/src/main/python/simple_opa_integration/controllers/: user_controller.py
simple-opa-integration/src/main/python/simple_opa_integration/middleware/: authz_middleware.py
simple-opa-integration/src/test/python/controller/: test_user_controller.py
simple-opa-integration/tests/: conftest.py
simple-opa-integration/tests/controller/: test_user_controller.py
simple-opa-integration/tests/services/: test_authorization_service.py
(+34 files in other folders)
